// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}



model Admin {
  username String
  password String
  role     String
  id       Int    @id @default(autoincrement())
}

model Customer {
  id              Int        @id @default(autoincrement())
  username        String
  password        String
  role            String
  firstName       String
  lastName        String
  balance         Float
  shippingAddress String
  Purchase        Purchase[]
}

model Seller {
  id          Int        @id @default(autoincrement())
  username    String
  password    String
  role        String
  companyName String
  bankAccount String
  Product     Product[]
  Purchase    Purchase[]
}

model Product {
  productId Int        @id @default(autoincrement())
  name      String
  price     Float
  img       String
  sellerId  Int
  Seller    Seller     @relation(fields: [sellerId], references: [id])
  Purchase  Purchase[]
}

model Purchase {
  purchaseId      Int      @id @default(autoincrement())
  customerId      Int
  sellerId        Int
  productId       Int
  Customer        Customer @relation(fields: [customerId], references: [id])
  Seller          Seller   @relation(fields: [sellerId], references: [id])
  Product         Product  @relation(fields: [productId], references: [productId])
  quantity        Int
  totalPrice      Float
  date            DateTime @default(now())
  shippingAddress String
}

generator dbml { 
  provider = "prisma-dbml-generator"
}